# viduli-samples

./: LICENSE.MD  README.md
py-articles-api/: README.md  database.py  main.py  models.py  pyproject.toml
python-fastapi/: manage.py
